@@ -8,6 +8,7 @@ Features:
   * Update to EFL 1.17 release for better toolbar handling
   * Add file filtering for hunting down files in the list
   * Double click to select word, triple click to select line
+  * Return of the undo feature!
 
 Bug fixes:
 
